# multiqueue_experiments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.sh
athena_results/batch/: batch_DSJC1000_5_athena.csv  batch_brock400_4_athena.csv  batch_gen200_p0.9_44_athena.csv
athena_results/comparison/: comparison_dimacs.csv  pbs_comparison_dimacs.csv  reorder_comparison_dimacs.py
athena_results/filter1/: dimacs_instances_filtered.txt  filter_dimacs.csv
athena_results/knapsack/: knapsack_scalability_s069.csv
athena_results/mdkp/: mdkp_scalability_mdkp9.csv
athena_results/scalability/: ciaranm_scalability_DSJC1000_5.csv  ciaranm_scalability_brock400_4.csv  ciaranm_scalability_gen200_p0.9_44.csv  pbs_DSJC1000_5.csv  pbs_brock400_4.csv  pbs_gen200_p0.9_44.csv  scalability_DSJC1000_5.csv  scalability_brock400_4.csv  scalability_gen200_p0.9_44.csv
athena_results/stickiness/: stickiness_brock400_4.csv
benchmarks/: CMakeLists.txt  knapsack.cpp  knapsack_seq.cpp  knapsack_seq_dfs.cpp  knapsack_seq_pq.cpp  knapsack_seq_stack.cpp  knapsack_work_stealing.cpp  max_clique.cpp  max_clique_ciaranm.cpp  max_clique_pmc.cpp  max_clique_results.txt  max_clique_seq.cpp  max_clique_seq_dfs.cpp  max_clique_seq_pq.cpp  max_clique_seq_stack.cpp  max_clique_work_stealing.cpp  mdkp.cpp  mdkp_seq.cpp  mdkp_seq_pq.cpp  mdkp_seq_stack.cpp  mdkp_work_stealing.cpp
benchmarks/util/: bnb_parallel_driver.hpp  bnb_problem.hpp  bnb_sequential_driver.hpp  bnb_sequential_pq_driver.hpp  bnb_sequential_stack_driver.hpp  bnb_work_stealing_driver.hpp  knapsack_problem.hpp  max_clique_problem.hpp  selector.hpp
benchmarks/util/problems/: bnb_problem.hpp  knapsack_problem.hpp  max_clique_problem.hpp  mdkp_problem.hpp
data/: analysis_dimacs_instances.txt  dimacs_instances.txt  test.clq
data/orlib/: LICENSE
data/orlib/mknap/: mdkp6.txt  mdkp8.txt  mdkp9.txt
scratch/: mdkp_results.csv  plot.py
tools/: benchmark_batch.py  benchmark_comparison.py  benchmark_filter.py  benchmark_scalability.py  benchmark_stickiness.py  benchmarker.py  benchmarking.py  generate_report_plots.sh  knapsack_scalability.py  mdkp_scalability.py  result_plotter.py
wrapper/: 2d_stack.hpp  CMakeLists.txt  locked_stack.hpp  multilifo.hpp  pr.hpp  treiber_stack.hpp
